<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:alpha="0.9"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:id="@+id/filter_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridView
                android:id="@+id/filter_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
            <Button
                android:id="@+id/select_all_filters"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:layout_marginRight="2dp"
                android:padding="6dp"
                android:text="CHECK ALL"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:padding="10dp"
        android:gravity="right">


    </RelativeLayout>

</LinearLayout>