<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/src"
        android:gravity="center"
        android:id="@+id/ingredient_layout"
        android:padding="20dp"
        >

        <RelativeLayout
            android:alpha="0.9"
            android:layout_marginTop="20dp"
            android:layout_width="255dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_bg_text_input"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_height="40dp"
            android:id="@+id/auto_complete_ingredient_container">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ingredients"
                android:gravity="center"
                android:layout_width="220dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/auto_complete_ingredient"
                    android:layout_width="220dp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="50dp"
                    android:hint="Type ingredients"
                    android:layout_alignParentLeft="true"
                    android:text=""
                    android:inputType="textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>



        </RelativeLayout>

        <Button
            android:id="@+id/add"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:alpha="0.9"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/auto_complete_ingredient_container"
            android:background="@drawable/bg_add_button"
            android:drawableRight="@drawable/ic_add_blue"
            android:textColor="@color/colorPrimary"
            android:text="add"
            android:padding="5dp"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/auto_complete_ingredient_container">

        <Button
            android:id="@+id/id_type"
            android:alpha="0.9"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="recipe type"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/id_cuisine"
            android:alpha="0.9"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="cuisine"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/id_diet"
            android:layout_margin="5dp"
            android:alpha="0.9"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="diet"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_ingredients_divider"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ingredient_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_ings2" />

        <TextView
            android:id="@+id/type_ingredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorSecundaryText"
            android:text="@string/ingredients"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_toRightOf="@+id/ingredient_ic"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/scrollView_id"
            android:alpha="0.9"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_background_scr"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:padding="6dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/clear_all_ings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:text="clear"
                    android:textSize="15dp"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/colorPrimaryDark"
                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/selected_ingredients_list"
                    android:focusable="true"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_search_"
        android:layout_gravity="right" />


</LinearLayout>