<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <ImageButton
        android:id="@+id/icon_im"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_bg_filter_icon"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/icon_im"
        android:layout_height="35dp"
        android:layout_gravity="start"
        android:drawableRight="@drawable/filter_icon_mark"
        android:background="@drawable/bg_checkbox"
        android:textColor="@drawable/filter_text_color"
        android:textAlignment="textStart"
        android:textSize="12dp"
        android:text=""
        android:button="@null"
        />





</RelativeLayout>