...
    <string name="about">About</string>
    <!---->


    <!--Select ingredients Fragment -->
    <string name="ingredients">Ingredients</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <!---->

    <!-- Select filters Fragment-->
    <string name="filters">Select filters</string>
    <!---->
...
